# rail_ml_pipeline

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app.py  instructions.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
artifacts/: model.pkl  preprocessor.pkl  raw.csv  test.csv  train.csv
aws/: lambda_handler.py
notebook/: eda train data.ipynb  model training.ipynb
notebook/data/: create_train_simulation_data.py  train_positions.csv
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/data/: processor.py  train_data_processor.py
src/features/: engineering.py
src/models/: survival_probability.py  train_probability.py
src/pipeline/: predict_pipeline.py  prediction.py  train_pipeline.py
templates/: index.html
